--- a/talkMate/package.json
+++ b/talkMate/package.json
@@ -1,50 +1,51 @@
 {
-  "name": "hub",
-  "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "devv": "vite",
-    "build": "vite build"
-  },
-  "dependencies": {
-    "@hono/node-server": "^1.11.4",
-    "@hookform/resolvers": "^3.9.0",
-    "@kikurage/nicolive-api": "https://github.com/boxfish-jp/Nicolive-API/releases/download/1.0/kikurage-nicolive-api-0.0.4.tgz",
-    "@prisma/client": "5.16.1",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-radio-group": "^1.2.0",
-    "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
-    "@vitejs/plugin-react": "^4.3.1",
-    "cheerio": "^1.0.0-rc.12",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "hono": "^4.4.10",
-    "lucide-react": "^0.412.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.2",
-    "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "tmi.js": "^1.8.5",
-    "ws": "^8.17.1",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.17",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/tmi.js": "^1.8.6",
-    "@types/ws": "^8.5.10",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39",
-    "prisma": "^5.16.1",
-    "tailwindcss": "^3.4.6",
-    "tsx": "^4.7.1",
-    "typescript": "^5.6.2",
-    "vite": "^5.3.4"
-  }
+	"name": "hub",
+	"scripts": {
+		"dev": "tsx watch src/index.ts",
+		"devv": "vite",
+		"build": "vite build"
+	},
+	"dependencies": {
+		"@hono/node-server": "^1.11.4",
+		"@hookform/resolvers": "^3.9.0",
+		"@kikurage/nicolive-api": "https://github.com/boxfish-jp/Nicolive-API/releases/download/1.0/kikurage-nicolive-api-0.0.4.2.tgz",
+		"@prisma/client": "^5.21.1",
+		"@radix-ui/react-checkbox": "^1.1.1",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-radio-group": "^1.2.0",
+		"@radix-ui/react-scroll-area": "^1.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-toast": "^1.2.1",
+		"@vitejs/plugin-react": "^4.3.1",
+		"cheerio": "^1.0.0-rc.12",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"hono": "^4.4.10",
+		"lucide-react": "^0.412.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.52.2",
+		"socket.io": "^4.7.5",
+		"socket.io-client": "^4.7.5",
+		"tailwind-merge": "^2.4.0",
+		"tailwindcss-animate": "^1.0.7",
+		"tmi.js": "^1.8.5",
+		"ws": "^8.17.1",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@types/node": "^20.11.17",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"@types/tmi.js": "^1.8.6",
+		"@types/ws": "^8.5.10",
+		"autoprefixer": "^10.4.19",
+		"postcss": "^8.4.39",
+		"prisma": "^5.21.1",
+		"tailwindcss": "^3.4.6",
+		"tsx": "^4.7.1",
+		"typescript": "^5.6.2",
+		"vite": "^5.3.4"
+	}
 }
