--- a/AI/package.json
+++ b/AI/package.json
@@ -6,6 +6,8 @@
 	"dependencies": {
 		"@hono/node-server": "^1.12.0",
 		"@hono/node-ws": "^1.0.4",
+		"@langchain/core": "^0.3.17",
+		"@langchain/google-vertexai": "^0.1.0",
 		"hono": "^4.4.12",
 		"iconv-lite": "^0.6.3",
 		"socket.io": "^4.7.5"
