--- a/talkMate/package.json
+++ b/talkMate/package.json
@@ -28,6 +28,7 @@
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.52.2",
 		"screenshot-desktop": "^1.15.0",
+		"sharp": "^0.33.5",
 		"socket.io": "^4.7.5",
 		"socket.io-client": "^4.7.5",
 		"tailwind-merge": "^2.4.0",
