--- a/AI/package.json
+++ b/AI/package.json
@@ -9,6 +9,7 @@
     "@hono/node-ws": "^1.0.4",
     "@langchain/community": "^0.3.15",
     "@langchain/core": "^0.3.17",
+    "@langchain/google-vertexai-web": "^0.1.2",
     "hono": "^4.4.12",
     "iconv-lite": "^0.6.3",
     "node-llama-cpp": "3",
@@ -18,6 +19,7 @@
     "@biomejs/biome": "1.9.4",
     "@types/node": "^20.11.17",
     "@types/sound-play": "^1.1.3",
+    "dotenv": "^16.4.5",
     "tsx": "^4.7.1"
   }
 }
