--- a/talkMate/package.json
+++ b/talkMate/package.json
@@ -39,6 +39,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@types/dom-speech-recognition": "^0.0.4",
 		"@types/node": "^20.11.17",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
