--- a/AI/package.json
+++ b/AI/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "ai",
-  "scripts": {
-    "dev": "tsx watch src/index.ts"
-  },
-  "type": "module",
-  "dependencies": {
-    "@hono/node-server": "^1.12.0",
-    "@hono/node-ws": "^1.0.4",
-    "@langchain/community": "^0.3.15",
-    "@langchain/core": "^0.3.17",
-    "@langchain/google-vertexai-web": "^0.1.2",
-    "hono": "^4.4.12",
-    "iconv-lite": "^0.6.3",
-    "node-llama-cpp": "3",
-    "socket.io": "^4.7.5"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/node": "^20.11.17",
-    "@types/sound-play": "^1.1.3",
-    "dotenv": "^16.4.5",
-    "tsx": "^4.7.1"
-  }
+	"name": "ai",
+	"scripts": {
+		"dev": "tsx watch --env-file=.env.local src/index.ts"
+	},
+	"type": "module",
+	"dependencies": {
+		"@hono/node-server": "^1.12.0",
+		"@hono/node-ws": "^1.0.4",
+		"@langchain/community": "^0.3.15",
+		"@langchain/core": "^0.3.17",
+		"@langchain/google-vertexai-web": "^0.1.2",
+		"hono": "^4.4.12",
+		"iconv-lite": "^0.6.3",
+		"node-llama-cpp": "3",
+		"socket.io": "^4.7.5"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@types/node": "^20.11.17",
+		"@types/sound-play": "^1.1.3",
+		"tsx": "^4.7.1"
+	}
 }
