--- a/ai_vtuber/package.json
+++ b/ai_vtuber/package.json
@@ -8,12 +8,15 @@
     "@hono/node-server": "^1.13.7",
     "@prisma/client": "6.1.0",
     "hono": "^4.6.14",
+    "screenshot-desktop": "^1.15.0",
+    "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@types/node": "^20.11.17",
+    "@types/screenshot-desktop": "^1.12.3",
     "prisma": "^6.1.0",
     "tsx": "^4.7.1"
   }
