--- a/ai_vtuber/package.json
+++ b/ai_vtuber/package.json
@@ -2,7 +2,8 @@
 	"name": "ai_vtuber",
 	"type": "module",
 	"scripts": {
-		"dev": "tsx watch --env-file=.env  src/index.ts"
+		"dev": "tsx watch --env-file=.env  src/index.ts",
+		"test": "vitest run"
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.13.7",
@@ -20,7 +21,9 @@
 		"@biomejs/biome": "^1.9.4",
 		"@types/node": "^20.11.17",
 		"@types/screenshot-desktop": "^1.12.3",
+		"dotenv": "^16.4.7",
 		"prisma": "^6.1.0",
-		"tsx": "^4.7.1"
+		"tsx": "^4.7.1",
+		"vitest": "^2.1.8"
 	}
 }
