--- a/ai_vtuber/package.json
+++ b/ai_vtuber/package.json
@@ -7,6 +7,7 @@
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.13.7",
+		"@hono/zod-validator": "^0.4.2",
 		"@langchain/community": "^0.3.19",
 		"@langchain/core": "^0.3.26",
 		"@langchain/google-vertexai-web": "^0.1.5",
