--- a/ai_vtuber/package.json
+++ b/ai_vtuber/package.json
@@ -8,9 +8,9 @@
 	"dependencies": {
 		"@hono/node-server": "^1.13.7",
 		"@hono/zod-validator": "^0.4.2",
-		"@langchain/community": "^0.3.19",
 		"@langchain/core": "^0.3.26",
 		"@langchain/google-vertexai-web": "^0.1.5",
+		"@langchain/ollama": "^0.1.4",
 		"@prisma/client": "6.1.0",
 		"hono": "^4.6.14",
 		"screenshot-desktop": "^1.15.0",
