--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.1",
+		"@radix-ui/react-dialog": "^1.1.6",
 		"@radix-ui/react-label": "^2.1.1",
 		"@radix-ui/react-radio-group": "^1.2.2",
 		"@radix-ui/react-scroll-area": "^1.2.2",
@@ -19,6 +20,7 @@
 		"@radix-ui/react-toast": "^1.2.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"hono": "^4.7.4",
 		"lucide-react": "^0.469.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -26,6 +28,7 @@
 		"socket.io-client": "^4.8.1",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
+		"vaul": "^1.1.2",
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
