fix: ビルド向けに修正

--- a/ai_vtuber/tsconfig.json
+++ b/ai_vtuber/tsconfig.json
@@ -10,6 +10,7 @@
     ],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "outDir": "./dist"
   }
 }
